# inbound-cause-analysis

./: .env.example  .gitignore  Makefile  PROJECT.md  README.md  pyproject.toml  requirements.txt
artifacts/: F1_content_brief.json  F1_content_brief.md  F2_ad_copy_variants.json  F2_ad_copy_variants.md  F3_sequence_play.json  F3_sequence_play.md  F4_icp_refinement.json  F4_icp_refinement.md  F5_ad_copy_variants.json  F5_ad_copy_variants.md  resonance.json  resonance.md
artifacts/noisy/: F1_content_brief.json  F1_content_brief.md  F2_ad_copy_variants.json  F2_ad_copy_variants.md  F3_sequence_play.json  F3_sequence_play.md  F4_icp_refinement.json  F4_icp_refinement.md  F5_ad_copy_variants.json  F5_ad_copy_variants.md  resonance.json  resonance.md
docs/: aha-patterns.md  data-world.md  one-pager.html
src/ica/: __init__.py  cli.py  dashboard.py  insight.py  schema.py  taxonomy.py
src/ica/generator/: __init__.py  channels.py  content_library.py  copy_bank.py  journeys.py  noise.py  outcomes.py  personas.py  seed.py  spurious.py
tests/: test_aha_patterns.py  test_channels.py  test_cli.py  test_content_library.py  test_copy_bank.py  test_generator.py  test_insight.py  test_journeys.py  test_noise_discrimination.py  test_noise_tolerance.py  test_outcomes.py  test_personas.py  test_schema.py  test_taxonomy.py
