[project]
name = "ica"
version = "0.1.0"
description = "Inbound Cause Analysis — synthetic data generator and analysis pipeline"
requires-python = ">=3.11"
dependencies = [
    "faker>=24.0",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]
dashboard = [
    "streamlit>=1.30",
    "pandas>=2.0",
]
insight = [
    "anthropic>=0.40",
    "python-dotenv>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ica"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
